--- a/Aula 01/01Estrutura.html
+++ b/Aula 01/01Estrutura.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>Estrutura 01 :.</title>
 </head>
 <body>
-    
+
 
     
 </body>
